   * revised multiplayer maps: Divide and Conquer, Sablestone Delta,
     Silverhead Crossing, Sullas Ruins, 1v1v1Hex, Charge
 * campaign server
   * Support new "timestamp" attribute
   * Save persistent attributes in the campaign data
     * The campaign name cannot be stored in "name" as that is treated as a
       directory name, so use campaign_name instead.
   * Support filtering on campaign_list requests
     * filter by name
     * filter by last update time (before or after)
     * filter by language of translation
   * campaign_list response now contains the time the request was processed
   * campaign_list response now contains information about translations
   * problem with duplicate translations being saved with each upload has been
     fixed.
 * utils: added weblist.pl and webtgz.pl web interface programs
   * updated weblist.pl to display translation information
   * updated weblist.pl and webtgz.pl to use standard wesnoth logo banner
   * updated webtgz.pl to request campaign info only for the campaign of interest
   * updated weblist.pl to display sizes in KB.
   * because the heuristic for determining translations will sometimes give
     duplicates, I changed the web page to remove duplicate languages
   * I fixed a bug in how the language list was sorted on the web page
   * Updated webtgz.pl to do a couple of undefines before starting the copy of
     the cached campaign, to give perl a chance to release some memory.
 * fix untranslated unit create dialog (#4424)
 * random map generator now uses island_size (#4458)
 * various bug fixes and code cleanups

Version 1.0rc1:
 * language and i18n:
   * updated translations: Afrikaans, Bulgarian, Catalan, Finnish, German,
     Greek, Hungarian, Japanese, Portuguese (Brazil), Russian, Slovenian,
     Spanish, Turkish
   * new manual: Hungarian, updated manual: English, Swedish
   * updated man pages: English, German, Swedish 
 * campaigns:
   * The Dark Hordes